--- a/server.cfg
+++ b/server.cfg
@@ -2,6 +2,7 @@
 # Only change the IP if you're using a server with multiple network interfaces, otherwise change the port only.
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
+sv_listingIPOverride "51.75.66.227"
 
 # Server player slot limit (see https://fivem.net/server-hosting for limits)
 sv_maxclients 48
@@ -54,7 +55,7 @@ sv_hostname "Server gazduit de catre entrixhost.ro"
 sets sv_projectName "Server gazduit de catre entrixhost.ro"
 
 # Set your server's Project Description
-sets sv_projectDesc "Default Pterodactyl requiring configuration"
+sets sv_projectDesc "Default EntrixHost requiring configuration"
 
 # Nested configs!
 #exec resources.cfg
